# matrix_operations

./: CMakeLists.txt
cmake/: FindTACO.cmake
eigen3_ops/: CMakeLists.txt  eigen3_ops.cpp  matrix_ops.cpp
include/: matrix_ops.hpp  profiler.hpp
src/: CMakeLists.txt  matrix_ops.cpp
taco_ops/: CMakeLists.txt  matrix_ops.cpp  taco_ops.cpp
